@@ -4,6 +4,7 @@
 * Fix - Changing the "id" to avoid cached sites pulling through the same gallery for each destination
 * Dev - Added in an option to disable the collapse function on single posts
 * Dev - Updated "Tested up to" WordPress version
+* Dev - Fixed archive excerpt display when there is not post content
 
 ### 1.1.1
 * Fix - Removed the "prepare" statement from the destinations "filter_countries" function.
